Fixes #11644: Improve Rules tabs visibility

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentRuleEditForm.html
@@ -51,10 +51,12 @@
   <div id="editRuleZone">
     <div class="col-xs-12">
       <div class="box nav-tabs-custom has-toolbar">
-        <ul class="nav nav-tabs pull-right rules-nav-tab">
-          <li><a id="settingsTab" href="#ruleDetailsEditTab" data-toggle="tab">Settings</a></li>
+        <div class="box-header">
+          <h3 class="box-title"><i id="changeIconRule" class="fa fa-gear"></i> Rule</h3>
+        </div>
+        <ul class="nav nav-tabs rules-nav-tab">
           <li class="active"><a href="#ruleComplianceTab" data-toggle="tab">Compliance</a></li>
-          <li class="pull-left header"><i id="changeIconRule" class="fa fa-gear"></i> Rule</li>
+          <li><a id="settingsTab" href="#ruleDetailsEditTab" data-toggle="tab">Settings</a></li>
         </ul>
         <div class="tab-content no-padding">
           <div class="chart tab-pane active" id="ruleComplianceTab">
