--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -171,3 +171,62 @@
 #desactivateAction > input {
   text-transform: capitalize;
 }
+
+/* POLICY MODE */
+#policyModes{
+  margin-top: 0;
+}
+.policymode-group label.radio-inline,
+.policymode-group input + span{
+  padding: 0;
+  margin: 0;
+}
+.policymode-group input{
+  display: none !important;
+}
+.policymode-group input + span > span{
+  border: 1px solid #ddd;
+  background-color: #f4f4f4;
+  padding: 6px 12px;
+  margin: 0;
+  font-size: 14px;
+  display: inline-block;
+  min-width: 85px;
+  min-height: 35px;
+  text-align: center;
+}
+.policymode-group input + span > span:hover{
+  border-color: #adadad;
+}
+.policymode-group > label:first-child > input + span> span{
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  border-right: none;
+}
+.policymode-group > label:last-child > input + span> span{
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  border-left: none;
+}
+.policymode-group input:checked + span> span{
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.225);
+}
+.policymode-group input:checked + span > span.audit-btn{
+  background-color: #3694d1;
+  color: #fff;
+}
+.policymode-group input:checked + span > span.enforce-btn{
+  background-color: #9bc832;
+  color: #fff;
+}
+.policymode-group input:checked + span > span.global-btn{
+  background-color: #efefef;
+}
+.policymode-group .global-mode.audit:before{
+  content: "audit";
+  color: #3694d1;
+}
+.policymode-group .global-mode.enforce:before{
+  content: "enforce";
+  color: #9bc832;
+}
