Fixes #15107: Folded subsections in directive forms are not visible enough

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-directives.css
@@ -34,7 +34,9 @@
 *
 *************************************************************************************
 */
-
+.section-title {
+  border-bottom-color: #f08004 ;
+}
 #versionTable + .checkbox-group{
   margin-top:4px;
 }
@@ -163,7 +165,6 @@
     content:"";
   }
 }
-
 .radio > label > input{
   top: -2px;
 }
