Fixes #16194: Make the \"Add node property\" form more visible

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1193,6 +1193,7 @@ ul.graph-legend > li.legend:hover{
 }
 #addPropTable{
   width:100%;
+  margin-bottom: 20px;
 }
 #addPropTable tbody > tr{
   padding:0;
