Fixes #16216: Display 'long' description  as markdown

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-bootstrap.css
@@ -803,3 +803,12 @@ input.no-tw-bs, .no-tw-bs input[type="checkbox"], .no-tw-bs input[type="radio"]{
   color: #337ab7;
   text-decoration:none;
 }
+
+textarea.form-control, .content-wrapper textarea.form-control {
+  height: auto;
+}
+
+.half-opacity {
+  opacity:0.5
+}
+
