--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder.css
@@ -1506,3 +1506,21 @@ label span.text-fit{
   font-size: 12px;
   font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+.markdown{
+  font-size: .9em;
+  padding: 10px;
+  border: 1px solid #eee;
+  border-top: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: #f3f8ff;
+}
+
+.markdown > p:last-child{
+  margin-bottom: 0;
+}
+
+.cursorPointer {
+  cursor:pointer;
+}
