Fixes #16223: Regroup tabs from \"Hardware\" to \"Virtual Machines\" into one

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/templates-hidden/components/ComponentNodeProperties.html
@@ -1,5 +1,5 @@
 <nodeproperties-tab>
-  <div id="tabPropsId" class="sInventory overflow_auto" style="display:none;">
+  <div id="tabPropsId" class="sInventory overflow_auto">
      <div id="nodeProp" ng-controller="nodePropertiesCtrl">
        <div class="row">
 
