Fixes #16019: Close button in Generic Method tab is not working

--- a/builder/css/custom.css
+++ b/builder/css/custom.css
@@ -205,6 +205,7 @@ body > .container-fluid > .row > div {
 }
 .show-methods .col-techniques > .row{
   transform: translateX(-50px);
+  pointer-events: none;
 }
 .dndPlaceholder{
   margin: 10px 0;
