Fixes #16113: Ttitle are too big in doc blocks of the settings page

--- a/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/webapp/sources/rudder/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1703,7 +1703,7 @@ form .tooltip-content p {
   overflow: hidden;
 }
 .callout-fade h4{
-  font-size: 1.4em;
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 12px;
   color: #818181;
